--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,50 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			Mi primer formulario
+		</div>
+		<div class="panel-body">
+			<form novalidate [formGroup]="form">
+				<div class="form-group">
+					<label for="codigo">Code</label>
+					<input type="text" class="form-control" id="codigo" formControlName="codigo">
+				</div>
+
+				<div class="form-group">
+					<label for="nombre">Nombre</label>
+					<input type="text" class="form-control" id="nombre" formControlName="nombre">
+					<div *ngIf="form.controls.nombre.errors && form.controls.nombre.dirty">
+						<div *ngIf="form.controls.nombre.errors.required" class="alert alert-danger">
+							El campo es requerido
+						</div>
+						<div *ngIf="form.controls.nombre.errors.minlength" class="alert alert-danger">
+							El campo requiere minimo 3 caracteres
+						</div>
+						<div *ngIf="form.controls.nombre.errors.maxlength" class="alert alert-danger">
+							El campo requiere maximo 5 caracteres
+						</div>
+						<div *ngIf="form.controls.nombre.errors.sinEspacios" class="alert alert-danger">
+							Sin espacios
+						</div>
+						{{ form.controls.nombre.errors | json }}
+					</div>
+				</div>
+
+				<div formGroupName="contacto">
+					<div class="form-group">
+						<label for="telefono">Telefono</label>
+						<input type="text" class="form-control" id="telefono" formControlName="telefono">
+					</div>
+
+					<div class="form-group">
+						<label for="email">Correo</label>
+						<input type="email" class="form-control" id="email" formControlName="email">
+					</div>
+				</div>
+
+				<button type="submit" class="btn btn-default">Submit</button>
+			</form>
+		</div>
+	</div>
+</div>
+{{ form.value | json }}
